--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   kaccounts-providers-20240218.tar.bz2: 6db2f1b5edca558e732290bd32dbaeade618674f
+  kaccounts-providers-24.02.0.tar.xz: 65092ed68def3569a5f8155096454e7847ec6479
